--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ li a:hover {
   -webkit-text-stroke: 0.6px var(--Fucsia);
 }
 
-.menu__home a {
-  font-size: 26px;
+.menuSelected {
   -webkit-text-stroke: 0.6px var(--Fucsia);
+  font-size: 26px;
 }
 
 .menu__logo {
@@ -249,4 +249,30 @@ footer {
 
 .social {
   text-align: center;
+}
+
+/* accesorios */
+.mainAcc {
+  display: flex;
+  justify-content: center;
+}
+
+.containerAcc {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(10px, auto);
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 6rem;
+  row-gap: 4rem;
+  margin: 3rem 20rem 5rem 20rem;
+}
+
+.containerAcc h1 {
+  display: inline;
+  margin-left: 10px;
+  font-size: 24px;
+  grid-column: 1/5;
+  justify-self: center;
+  margin: 0rem 20rem;
 }
