--- a/style.css
+++ b/style.css
@@ -276,3 +276,62 @@ footer {
   justify-self: center;
   margin: 0rem 20rem;
 }
+
+/* The Modal (background) */
+.modalLogin {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  backdrop-filter: blur(1px);
+}
+
+/* Modal Content/Box */
+.modalLogin-content {
+  background-color: #fefefe;
+  margin: 10% auto; /* 15% from the top and centered */
+  width: 20%; /* Could be more or less, depending on screen size */
+  padding: 2rem 2rem 5rem 2rem;
+  border: 3px solid var(--Light-blue);
+  border-radius: 2rem;
+}
+
+.formLogin {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.formLogin h2 {
+  font-size: 32px;
+}
+
+.formLogin input {
+  border: none;
+  background-color: var(--Gris);
+  font-size: 28px;
+  padding-left: 10px;
+  width: 60%;
+}
+
+.formLogin input::placeholder {
+  color: var(--Gray);
+}
+
+.formLogin button {
+  border: none;
+  background-color: var(--Fucsia);
+  font-size: 28px;
+  padding: 5px;
+  width: 40%;
+  border-radius: 0.6rem;
+  cursor: pointer;
+}
