--- a/style.css
+++ b/style.css
@@ -6,332 +6,685 @@
   --Fucsia: #ef5da8;
   --Gris: #f1f1f1;
 }
-* {
-  font-family: "Lacquer", cursive;
-}
-body {
-  background-color: var(--Pink);
-  margin: 0;
-}
+@media only screen and (min-width: 1024px) {
+  * {
+    font-family: "Lacquer", cursive;
+  }
+  body {
+    background-color: var(--Pink);
+    margin: 0;
+  }
 
-nav {
-  background-color: var(--Light-blue);
-  padding: 1rem 15rem;
-  display: flex;
-  justify-content: space-between;
-}
+  nav {
+    background-color: var(--Light-blue);
+    padding: 1rem 15rem;
+    display: flex;
+    justify-content: center;
+  }
 
-ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  list-style-type: none;
-}
+  .btn_menu {
+    visibility: hidden;
+  }
 
-li {
-  margin: 0 1rem;
-}
+  ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+  }
 
-li a {
-  background: none;
-  border: none;
-  font-size: 20px;
-  text-decoration: none;
-  color: black;
-}
+  li {
+    margin: 0 1rem;
+  }
 
-li a:hover {
-  -webkit-text-stroke: 0.6px var(--Fucsia);
-}
+  li a {
+    background: none;
+    border: none;
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+  }
 
-.menuSelected {
-  -webkit-text-stroke: 0.6px var(--Fucsia);
-  font-size: 26px;
-}
+  li a:hover {
+    -webkit-text-stroke: 0.6px var(--Fucsia);
+  }
 
-.menu__logo {
-  display: flex;
-  align-items: center;
-}
+  .menuSelected {
+    -webkit-text-stroke: 0.6px var(--Fucsia);
+    font-size: 26px;
+  }
 
-.menu__registro {
-  border: 2px solid var(--Fucsia);
-  padding: 5px;
-}
+  .menu__logo {
+    display: flex;
+    align-items: center;
+  }
 
-.menu__logo a img {
-  width: 60px;
-  height: 60px;
-}
+  .menu__registro {
+    border: 2px solid var(--Fucsia);
+    padding: 5px;
+  }
 
-.logo {
-  text-decoration: none;
-  color: black;
-}
+  .menu__logo a img {
+    width: 60px;
+    height: 60px;
+  }
 
-h1 {
-  display: inline;
-  margin-left: 10px;
-  font-size: 24px;
-}
+  .logo {
+    text-decoration: none;
+    color: black;
+  }
 
-.novedades {
-  display: grid;
-  grid-template-columns: 2;
-  grid-template-rows: 2;
-  justify-content: space-between;
-  margin: 0 24rem;
-}
+  h1 {
+    display: inline;
+    margin-left: 10px;
+    font-size: 24px;
+    text-align: center;
+  }
 
-.novedades h2 {
-  text-align: center;
-  margin: 3rem 0;
-  font-size: 32px;
-  grid-column: 1/3;
-}
-.novedades img {
-  width: 500px;
-  height: 228px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
+  .novedades {
+    display: grid;
+    grid-template-columns: 2;
+    grid-template-rows: 2;
+    justify-content: center;
+  }
 
-.novedades__img1 {
-  grid-column: 1/2;
-}
+  .novedades h2 {
+    text-align: center;
+    margin: 3rem 0;
+    font-size: 32px;
+    grid-column: 1/3;
+  }
+  .novedades img {
+    width: 100%;
+    height: 290px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
 
-.novedades__img2 {
-  grid-column: 2/3;
-}
+  .novedad1 {
+    margin-right: 10px;
+    grid-column: 1/2;
+  }
 
-.containerProductos {
-  display: grid;
-  grid-template-columns: 2;
-  grid-auto-rows: minmax(100px, auto);
-  justify-content: center;
-  gap: 4rem;
-  margin-top: 3rem;
-}
+  .novedad2 {
+    margin-left: 10px;
+    grid-column: 2/3;
+  }
 
-.masVendidos {
-  grid-column: 1/2;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
-  grid-auto-rows: minmax(10px, auto);
-  justify-content: center;
-  align-items: center;
-  margin-left: 10rem;
-}
+  .containerProductos {
+    display: grid;
+    grid-template-columns: 2;
+    grid-auto-rows: minmax(100px, auto);
+    justify-content: center;
+    gap: 5%;
+    margin-top: 3rem;
+  }
 
-.masVendidos h2 {
-  text-align: center;
-  grid-column: 1/4;
-  font-size: 32px;
-}
+  .masVendidos {
+    grid-column: 1/2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5%;
+    grid-auto-rows: minmax(10px, auto);
+    justify-content: center;
+    align-items: center;
+  }
 
-.precompra {
-  grid-column: 2/3;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
-  grid-auto-rows: minmax(10px, auto);
-  justify-content: center;
-  align-items: center;
-  margin-right: 10rem;
-}
+  .masVendidos h2 {
+    text-align: center;
+    grid-column: 1/4;
+    font-size: 32px;
+  }
 
-.precompra h2 {
-  text-align: center;
-  grid-column: 1/4;
-  font-size: 32px;
-}
+  .precompra {
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5%;
+    grid-auto-rows: minmax(10px, auto);
+    justify-content: center;
+    align-items: center;
+  }
 
-.cardProducto {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  padding: 10px;
-  width: 168px;
-  height: 221px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
+  .precompra h2 {
+    text-align: center;
+    grid-column: 1/4;
+    font-size: 32px;
+  }
 
-.cardProducto img {
-  width: 142px;
-  height: 142px;
-  justify-self: center;
-  align-self: center;
-}
+  .cardProducto {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 10px;
 
-.cardProducto__Text {
-  margin-left: 1rem;
-  margin-top: 10px;
-  font-size: 13px;
-}
-.cardProducto__Price {
-  margin-left: 1rem;
-  margin-top: 0;
-  font-size: 16px;
-  font-family: "Krub", sans-serif;
-  -webkit-text-stroke: 0.8px var(--Fucsia);
-}
+    height: 221px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
 
-.card__overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  visibility: none;
-  transition: 0.1s ease;
-}
+  .cardProducto img {
+    width: 142px;
+    height: 142px;
+    justify-self: center;
+    align-self: center;
+  }
 
-.card__overlay a {
-  text-decoration: none;
-}
+  .cardProducto__Text {
+    margin-left: 1rem;
+    margin-top: 10px;
+    font-size: 13px;
+  }
+  .cardProducto__Price {
+    margin-left: 1rem;
+    margin-top: 0;
+    font-size: 16px;
+    font-family: "Krub", sans-serif;
+    -webkit-text-stroke: 0.8px var(--Fucsia);
+  }
 
-.card__overlay .overlay__text .ver {
-  position: absolute;
-  right: 17%;
-  top: 30%;
-  border: 2px solid var(--Light-blue);
-  border-radius: 15px;
-  padding: 3px 10px;
-  background: rgba(194, 194, 194, 0.2);
-  font-size: 20px;
-  text-decoration: underline;
-  -webkit-text-stroke: 0.4px var(--Light-blue);
-  color: black;
-}
+  .card__overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    visibility: none;
+    transition: 0.1s ease;
+  }
 
-.card__overlay .overlay__text .agregar {
-  position: absolute;
-  right: 22%;
-  top: 50%;
-  border: 2px solid var(--Fucsia);
-  border-radius: 15px;
-  padding: 3px 10px;
-  background: rgba(194, 194, 194, 0.2);
-  font-size: 20px;
-  text-decoration: underline;
-  -webkit-text-stroke: 0.4px var(--Fucsia);
-  color: black;
-}
+  .card__overlay a {
+    text-decoration: none;
+  }
 
-.cardProducto:hover .card__overlay {
-  opacity: 1;
-  backdrop-filter: blur(2px);
-}
+  .card__overlay .overlay__text .ver {
+    position: absolute;
+    right: 17%;
+    top: 30%;
+    border: 2px solid var(--Light-blue);
+    border-radius: 15px;
+    padding: 3px 10px;
+    background: rgba(194, 194, 194, 0.2);
+    font-size: 20px;
+    text-decoration: underline;
+    -webkit-text-stroke: 0.4px var(--Light-blue);
+    color: black;
+  }
 
-footer {
-  margin-top: 3rem;
-  background-color: var(--Dark-blue);
-  color: white;
-  padding: 1rem;
-}
-.footer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(10px, auto);
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 10rem;
-}
+  .card__overlay .overlay__text .agregar {
+    position: absolute;
+    right: 22%;
+    top: 50%;
+    border: 2px solid var(--Fucsia);
+    border-radius: 15px;
+    padding: 3px 10px;
+    background: rgba(194, 194, 194, 0.2);
+    font-size: 20px;
+    text-decoration: underline;
+    -webkit-text-stroke: 0.4px var(--Fucsia);
+    color: black;
+  }
 
-.footer div a {
-  color: white;
-  font-size: 26px;
-  margin: 5px;
-}
+  .cardProducto:hover .card__overlay {
+    opacity: 1;
+    backdrop-filter: blur(2px);
+  }
 
-.social {
-  text-align: center;
-}
+  footer {
+    margin-top: 3rem;
+    background-color: var(--Dark-blue);
+    color: white;
+    padding: 1rem;
+  }
+  .footer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+    align-items: center;
+  }
 
-/* accesorios */
-.mainAcc {
-  display: flex;
-  justify-content: center;
-}
+  .footer div a {
+    color: white;
+    font-size: 26px;
+    margin: 5px;
+  }
 
-.containerAcc {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: minmax(10px, auto);
-  justify-content: space-between;
-  align-items: center;
-  column-gap: 6rem;
-  row-gap: 4rem;
-  margin: 3rem 20rem 5rem 20rem;
-}
+  .social {
+    text-align: center;
+  }
 
-.containerAcc h1 {
-  display: inline;
-  margin-left: 10px;
-  font-size: 24px;
-  grid-column: 1/5;
-  justify-self: center;
-  margin: 0rem 20rem;
-}
+  /* accesorios */
+  .mainAcc {
+    display: flex;
+    justify-content: center;
+  }
 
-/* The Modal (background) */
-.modalLogin {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  backdrop-filter: blur(1px);
-}
+  .containerAcc {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(10px, auto);
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 6rem;
+    row-gap: 4rem;
+    margin: 3rem 20rem 5rem 20rem;
+  }
 
-/* Modal Content/Box */
-.modalLogin-content {
-  background-color: #fefefe;
-  margin: 10% auto; /* 15% from the top and centered */
-  width: 20%; /* Could be more or less, depending on screen size */
-  padding: 2rem 2rem 5rem 2rem;
-  border: 3px solid var(--Light-blue);
-  border-radius: 2rem;
-}
+  .containerAcc h1 {
+    display: inline;
+    margin-left: 10px;
+    font-size: 24px;
+    grid-column: 1/5;
+    justify-self: center;
+    margin: 0rem 20rem;
+  }
 
-.formLogin {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-}
+  /* The Modal (background) */
+  .modalLogin {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    backdrop-filter: blur(1px);
+  }
 
-.formLogin h2 {
-  font-size: 32px;
-}
+  /* Modal Content/Box */
+  .modalLogin-content {
+    background-color: #fefefe;
+    margin: 10% auto; /* 15% from the top and centered */
+    width: 20%; /* Could be more or less, depending on screen size */
+    padding: 2rem 2rem 5rem 2rem;
+    border: 3px solid var(--Light-blue);
+    border-radius: 2rem;
+  }
 
-.formLogin input {
-  border: none;
-  background-color: var(--Gris);
-  font-size: 28px;
-  padding-left: 10px;
-  width: 60%;
-}
+  .formLogin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
 
-.formLogin input::placeholder {
-  color: var(--Gray);
-}
+  .formLogin h2 {
+    font-size: 32px;
+  }
 
-.formLogin button {
-  border: none;
-  background-color: var(--Fucsia);
-  font-size: 28px;
-  padding: 5px;
-  width: 40%;
-  border-radius: 0.6rem;
-  cursor: pointer;
+  .formLogin input {
+    border: none;
+    background-color: var(--Gris);
+    font-size: 28px;
+    padding-left: 10px;
+    width: 60%;
+  }
+
+  .formLogin input::placeholder {
+    color: var(--Gray);
+  }
+
+  .formLogin button {
+    border: none;
+    background-color: var(--Fucsia);
+    font-size: 28px;
+    padding: 5px;
+    width: 40%;
+    border-radius: 0.6rem;
+    cursor: pointer;
+  }
+}
+@media only screen and (max-width: 1023px) {
+  * {
+    font-family: "Lacquer", cursive;
+  }
+  body {
+    background-color: var(--Pink);
+    margin: 0;
+  }
+
+  nav {
+    background-color: var(--Light-blue);
+    padding: 1rem 15rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  ul {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    position: fixed;
+    width: 100vw;
+    height: calc(100% - 1rem);
+    background: gray;
+    top: -300vh;
+    text-align: center;
+    trasition: all 0.4s;
+    flex-direction: column;
+  }
+
+  li {
+    margin: 30px 0 0 0;
+    line-height: 30px;
+  }
+
+  li a {
+    background: none;
+    border: none;
+    font-size: 15px;
+    text-decoration: none;
+    color: black;
+  }
+
+  .btn_menu {
+    display: inline-flex;
+    visibility: visible;
+    font-size: 30px;
+    align-items: center;
+    margin-left: 4rem;
+    font-weight: bold;
+  }
+
+  li a:hover {
+    -webkit-text-stroke: 0.6px var(--Fucsia);
+  }
+
+  .menuSelected {
+    -webkit-text-stroke: 0.6px var(--Fucsia);
+    font-size: 21px;
+  }
+
+  .menu__logo {
+    display: flex;
+    align-items: center;
+  }
+
+  .menu__registro {
+    border: 2px solid var(--Fucsia);
+    padding: 5px;
+  }
+
+  .menu__logo a img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .logo {
+    text-decoration: none;
+    color: black;
+  }
+
+  h1 {
+    display: inline;
+    margin-left: 10px;
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .novedades {
+    display: grid;
+    grid-template-columns: 1;
+    grid-template-rows: 3;
+    justify-content: center;
+  }
+
+  .novedades h2 {
+    text-align: center;
+    margin: 3rem 0;
+    font-size: 32px;
+    grid-row: 1;
+  }
+  .novedades img {
+    width: 100%;
+    height: 200px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
+
+  .novedad1 {
+    grid-row: 2;
+  }
+
+  .novedad2 {
+    margin-top: 20px;
+    grid-row: 3;
+  }
+
+  .containerProductos {
+    display: grid;
+    grid-template-columns: 1;
+    grid-auto-rows: minmax(100px, auto);
+    justify-content: center;
+    gap: 5%;
+    margin-top: 3rem;
+  }
+
+  .masVendidos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5%;
+    grid-auto-rows: minmax(10px, auto);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .masVendidos h2 {
+    text-align: center;
+    grid-column: 1/3;
+    font-size: 28px;
+  }
+
+  .precompra {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5%;
+    grid-auto-rows: minmax(10px, auto);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .precompra h2 {
+    text-align: center;
+    grid-column: 1/3;
+    font-size: 28px;
+  }
+
+  .cardProducto {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 10px;
+    margin-top: 30px;
+    height: 221px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
+
+  .cardProducto img {
+    width: 130px;
+    height: 130px;
+    justify-self: center;
+    align-self: center;
+  }
+
+  .cardProducto__Text {
+    margin-left: 1rem;
+    margin-top: 10px;
+    font-size: 13px;
+  }
+  .cardProducto__Price {
+    margin-left: 1rem;
+    margin-top: 0;
+    font-size: 16px;
+    font-family: "Krub", sans-serif;
+    -webkit-text-stroke: 0.8px var(--Fucsia);
+  }
+
+  .card__overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    visibility: none;
+    transition: 0.1s ease;
+  }
+
+  .card__overlay a {
+    text-decoration: none;
+  }
+
+  .card__overlay .overlay__text .ver {
+    position: absolute;
+    right: 17%;
+    top: 30%;
+    border: 2px solid var(--Light-blue);
+    border-radius: 15px;
+    padding: 3px 10px;
+    background: rgba(194, 194, 194, 0.2);
+    font-size: 20px;
+    text-decoration: underline;
+    -webkit-text-stroke: 0.4px var(--Light-blue);
+    color: black;
+  }
+
+  .card__overlay .overlay__text .agregar {
+    position: absolute;
+    right: 22%;
+    top: 50%;
+    border: 2px solid var(--Fucsia);
+    border-radius: 15px;
+    padding: 3px 10px;
+    background: rgba(194, 194, 194, 0.2);
+    font-size: 20px;
+    text-decoration: underline;
+    -webkit-text-stroke: 0.4px var(--Fucsia);
+    color: black;
+  }
+
+  .cardProducto:hover .card__overlay {
+    opacity: 1;
+    backdrop-filter: blur(2px);
+  }
+
+  footer {
+    margin-top: 3rem;
+    background-color: var(--Dark-blue);
+    color: white;
+    padding: 1rem;
+  }
+  .footer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 3;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer div a {
+    color: white;
+    font-size: 26px;
+  }
+  .horarios {
+    grid-row: 1;
+  }
+  .contacto {
+    grid-row: 2;
+  }
+  .social {
+    text-align: center;
+    grid-row: 3;
+  }
+
+  /* accesorios */
+  .mainAcc {
+    display: flex;
+    justify-content: center;
+  }
+
+  .containerAcc {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(10px, auto);
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 6rem;
+    row-gap: 4rem;
+    margin: 3rem 20rem 5rem 20rem;
+  }
+
+  .containerAcc h1 {
+    display: inline;
+    margin-left: 10px;
+    font-size: 24px;
+    grid-column: 1/5;
+    justify-self: center;
+    margin: 0rem 20rem;
+  }
+
+  /* The Modal (background) */
+  .modalLogin {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    backdrop-filter: blur(1px);
+  }
+
+  /* Modal Content/Box */
+  .modalLogin-content {
+    background-color: #fefefe;
+    margin: 10% auto; /* 15% from the top and centered */
+    width: 20%; /* Could be more or less, depending on screen size */
+    padding: 2rem 2rem 5rem 2rem;
+    border: 3px solid var(--Light-blue);
+    border-radius: 2rem;
+  }
+
+  .formLogin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .formLogin h2 {
+    font-size: 32px;
+  }
+
+  .formLogin input {
+    border: none;
+    background-color: var(--Gris);
+    font-size: 28px;
+    padding-left: 10px;
+    width: 60%;
+  }
+
+  .formLogin input::placeholder {
+    color: var(--Gray);
+  }
+
+  .formLogin button {
+    border: none;
+    background-color: var(--Fucsia);
+    font-size: 28px;
+    padding: 5px;
+    width: 40%;
+    border-radius: 0.6rem;
+    cursor: pointer;
+  }
 }
