added sign up form

--- a/style.css
+++ b/style.css
@@ -634,7 +634,7 @@
   }
 
   /* The Modal (background) */
-  .modalLogin {
+  .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -688,6 +688,40 @@
     font-size: 28px;
     padding: 5px;
     width: 40%;
+    border-radius: 0.6rem;
+    cursor: pointer;
+  }
+
+  .formRegister {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .formRegister h2 {
+    font-size: 32px;
+  }
+
+  .formRegister input {
+    border: none;
+    background-color: var(--Gris);
+    font-size: 28px;
+    padding-left: 10px;
+    width: 100%;
+  }
+
+  .formRegister input::placeholder {
+    color: var(--Gray);
+  }
+
+  .formRegister button {
+    border: none;
+    background-color: var(--Fucsia);
+    font-size: 28px;
+    padding: 5px;
+    width: 50%;
     border-radius: 0.6rem;
     cursor: pointer;
   }
