--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@
     grid-auto-rows: minmax(10px, auto);
     justify-content: center;
     align-items: center;
+    margin-bottom: 2rem;
   }
 
   .masVendidos h2 {
@@ -143,6 +144,7 @@
     grid-auto-rows: minmax(10px, auto);
     justify-content: center;
     align-items: center;
+    margin-bottom: 2rem;
   }
 
   .precompra h2 {
@@ -370,6 +372,56 @@
     width: 50%;
     border-radius: 0.6rem;
     cursor: pointer;
+  }
+  /* Dropdown Button */
+  .dropbtn {
+    background-color: var(--Fucsia);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    border-radius: 10%;
+    margin-left: 1rem;
+  }
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    margin-left: 1rem;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    filter: brightness(1.1);
   }
 }
 @media only screen and (max-width: 1023px) {
@@ -757,5 +809,53 @@
     width: 50%;
     border-radius: 0.6rem;
     cursor: pointer;
+  }
+  /* Dropdown Button */
+  .dropbtn {
+    background-color: var(--Fucsia);
+    color: white;
+    padding: 12px;
+    font-size: 16px;
+    border: none;
+    border-radius: 10%;
+  }
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    filter: brightness(1.1);
   }
 }
